# AvaSimRT

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: BLENDER_SETUP.md
examples/: empty.xml
examples/mitsuba/1/: scene.xml
examples/mitsuba/3_distant/: scene.xml
examples/nordkette/: 01-preprocess-full.yml  02-preprocess-heightmap.yml  03-preprocess-positions.yml  04-motion-trajectories.yml  05-channelstate-without.yml  README.md  config.yml
examples/nordkette/assets/: detailed_heightmap.npy  detailed_heightmap_meta.json  heightmap.npy  heightmap_meta.json  positions_resolved.json  scene.blend  scene.mtl  scene.ply  scene.xml  scene_generated.mtl  scene_generated.ply
examples/nordkette/assets_old/: detailed_heightmap.npy  scene.mtl
examples/seegrube/: 01-preprocessing.yml  02-motion.yml  03-channel-1-no_snow.yml  03-channel-2-some_snow.yml  03-channel-3-some_snow_fast.yml  03-channel_no_snow.yml  04-output_no_snow.yml  REAME.md  copy_output_to_assets.sh  run_tests.sh
examples/seegrube/assets/: heightmap-0.5.npy  heightmap-1.npy  heightmap-10.npy  heightmap-100.npy  heightmap-2.npy  heightmap-25.npy  heightmap-3.npy  heightmap-4.npy  heightmap-5.npy  heightmap-50.npy  heightmap_meta-0.5.json  heightmap_meta-1.json  heightmap_meta-10.json  heightmap_meta-100.json  heightmap_meta-2.json  heightmap_meta-25.json  heightmap_meta-3.json  heightmap_meta-4.json  heightmap_meta-5.json  scene.blend  (+4 more)
scripts/: setup_blender.sh
src/avasimrt/: __init__.py  app.py  cli.py  config.py  helpers.py  io.py  math.py  result.py
tests/: conftest.py  test_blender_export_visual_gen.py  test_channelstate_simulation_gen.py  test_cli_config_resolution.py  test_heightmap_performance_visual.py  test_heightmap_visualization_gen.py  test_math.py  test_math_gen.py  test_motion_simulation_gen.py  test_output_dir.py  test_output_dir_gen.py  test_regression.py  test_reporting_csv_gen.py  test_smoke.py  test_snow_area_gen.py  test_visualization_interactive_gen.py  test_visualization_math.py  test_visualization_math_gen.py  test_visualization_plots_gen.py
tests/presentation/: conftest.py  test_heightmap_resolution_performance.py  test_mitsuba_scene_comparison.py  test_sionna_distance_amplitude.py  test_sionna_snow.py  test_sionna_snow_attenuation.py  test_sionna_snow_performance.py
(+139 files in other folders)
